--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -1,5 +1,5 @@
 // Core colors
-$primary-color: #303FE5 !default;
+$primary-color: #121212 !default;
 $primary-color-dark: darken($primary-color, 3%) !default;
 $primary-color-light: lighten($primary-color, 3%) !default;
 $secondary-color: lighten($primary-color, 40%) !default;
@@ -7,7 +7,7 @@ $secondary-color-dark: darken($secondary-color, 3%) !default;
 $secondary-color-light: lighten($secondary-color, 3%) !default;
 
 // Gray colors
-$dark-color: #111 !default;
+$dark-color: #121212 !default;
 $light-color: #fff !default;
 $gray-color: lighten($dark-color, 60%) !default;
 $gray-color-dark: darken($gray-color, 25%) !default;
