--- a/styles/scss/_avatars.scss
+++ b/styles/scss/_avatars.scss
@@ -10,6 +10,7 @@
   line-height: 1.25;
   margin: 0;
   position: relative;
+  text-transform: uppercase;
   vertical-align: middle;
 
   &.avatar-xs {
